@@ -18,11 +18,14 @@
 #define __CGROUPS_ISOLATOR_SUBSYSTEMS_DEVICES_HPP__
 
 #include <string>
+#include <vector>
 
 #include <process/owned.hpp>
 
 #include <stout/hashset.hpp>
 #include <stout/try.hpp>
+
+#include "linux/cgroups.hpp"
 
 #include "slave/flags.hpp"
 
@@ -63,9 +66,13 @@ public:
       const std::string& cgroup);
 
 private:
-  DevicesSubsystem(const Flags& flags, const std::string& hierarchy);
+  DevicesSubsystem(
+      const Flags& flags,
+      const std::string& hierarchy,
+      const std::vector<cgroups::devices::Entry>& whitelistDeviceEntries);
 
   hashset<ContainerID> containerIds;
+  std::vector<cgroups::devices::Entry> whitelistDeviceEntries;
 };
 
 } // namespace slave {
